# portfolio-operations

./: .env.example  .gitignore  Dockerfile.celery  Dockerfile.local  Makefile  README.md  docker-compose.local.yml  docker_entrypoint.sh  manage.py  pyproject.toml
accounts/: admin.py  models.py  tasks.py  tests.py
accounts/migrations/: 0001_initial.py  0002_remove_capitalflow_accounts_ca_fund_id_f5a939_idx_and_more.py  0003_accountbrokercredential.py  0004_accountbrokercredential_environment.py  0005_accountportfoliohistory.py
accounts/services/: capital_flows.py  portfolio_history.py
accounts/utils/: external_refs.py
api/: serializers.py  tests.py  urls.py  views.py
assets/css/: admin.css
clients/: admin.py  models.py
core/: apps.py  asgi.py  celery.py  db_pragmas.py  settings.py  urls.py  views.py  wsgi.py
docker/: Dockerfile  Dockerfile.local  docker-compose.local.yml  docker-compose.yml
docker/cron/: backup_db  (+6 more)
entrypoints/: local-web.sh  scheduler.sh
fees/: admin.py  models.py  tasks.py
funds/: admin.py  models.py
operations/: admin.py  models.py  tasks.py  tests.py
patches/: django_ses_linesep_patch.py
performance/: admin.py  models.py  nav.py  tasks.py  tests.py
reporting/: admin.py  models.py  tasks.py
scripts/: cron_backup.sh  cron_compute_nav_daily.sh  cron_healthcheck.sh  cron_monthly_reporting.sh  cron_sync_alpaca_account_portfolio_history.sh  cron_sync_alpaca_fills.sh  cron_weekly_reporting.sh  manage_wrapper.sh
services/: spaces.py
trading/: admin.py  models.py  sync.py  tasks.py  tests.py
workflows/: tasks.py
(+40 files in other folders)
