[tool.poetry]
name = "portfolio-operations"
version = "0.1.0"
description = ""
authors = ["Moses McCall <mosesmc52@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0"
boto3 = "^1.42.16"
openai = "^2.14.0"
django-configurations = "^2.5.1"
python-dotenv = "^1.2.1"
dj-database-url = "^3.0.1"
celery = "^5.6.0"
django-admin-colors = "^0.2.0"
redis = "^7.1.0"
markdown = "^3.10"
weasyprint = "^67.0"
matplotlib = "^3.10.8"
yfinance = "0.2.66"
alpaca-py = "^0.43.2"
reportlab = "^4.4.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
